# src/main/java/com/example/bankcards/exception/ErrorResponse.java
@@ -1,3 +1,9 @@
 package com.example.bankcards.exception;
 
-public record ErrorResponse(String error) {}
+import java.time.Instant;
+
+public record ErrorResponse(Instant timestamp, int status, String error, String message, String path) {
+    public static ErrorResponse of(int status, String error, String message, String path) {
+        return new ErrorResponse(Instant.now(), status, error, message, path);
+    }
+}
